--- a/index.html
+++ b/index.html
@@ -8,50 +8,39 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
-  <title>Frontend Mentor | 3-column preview card component</title>
-
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 
-  <link href="./styles.css" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+
+  <title>Frontend Mentor | Stats preview card component</title>
 
 </head>
 
 <body>
-  <div class="card-bg">
-    <div class="card-section">
-      <div class="three-col first">
-        <img src="images/icon-sedans.svg" alt="stylized sedan car icon" />
-        <h3>SEDANS</h3>
-        <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
-          or on your next road trip.</p>
-        <a href="#" class="btn" target="_blank">Learn More</a>
-      </div>
 
-      <div class="three-col second">
-        <img src="images/icon-suvs.svg" alt="stylized suv vehicle icon" />
-        <h3>SUVS</h3>
-        <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
-          and off-road adventures.</p>
-        <a href="#" class="btn" target="_blank">Learn More</a>
-      </div>
-
-      <div class="three-col third">
-        <img src="images/icon-luxury.svg" alt="stylized luxury car icon" />
-        <h3>LUXURY</h3>
-        <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
-          rental and arrive in style.</p>
-        <a href="#" class="btn" target="_blank">Learn More</a>
-      </div>
+  <main>
+    <div class="image-container">
     </div>
+    <section>
+      <h1>Get <span class="soft-violet">insights</span> that help your business grow.</h1>
 
+      <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and
+        overall efficiency.</p>
 
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="https://www.github.com/ninjulia">Julia</a> in 2021.
-    </div>
+      <div class="stats">
+        <h2>10k+ <span class="subheading">companies</span></h2>
+        <h2>314 <span class="subheading">templates</span></h2>
+        <h2>12m+ <span class="subheading">queries</span></h2>
+      </div>
+    </section>
+  </main>
+
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://github.com/ninjulia">Julia Czarnecki</a>.
   </div>
 </body>
 
